--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" description="Autor: Ernesto Aguirre, Descripción: Proyecto Buscador de Clima, usando Vite, Axios y Context API"/>
+    <meta name="description" content="Autor: Ernesto Aguirre, Descripción: Proyecto Buscador de Clima, usando Vite, Axios y Context API"/>
     <title>Clima App - Context</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
